fixed overflow issue

--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,11 @@
 }
 html {
   overflow-x: hidden;
-  /* height: 100vh; */
 }
 body {
-  /* height: 100vh; */
   background-color: var(--space);
   position: relative;
+  overflow-x: hidden;
 }
 main {
   max-width: 1640px;
